<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SettingsSortingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsSortingToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/content_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsSortingToolbar">

        <RadioGroup
            android:id="@+id/settingsSortingRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/settingsSortingNameAscendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sorting_by_name_ascending" />

            <RadioButton
                android:id="@+id/settingsSortingNameDescendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sorting_by_name_descending" />

            <RadioButton
                android:id="@+id/settingsSortingSizeAscendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sorting_by_size_ascending" />

            <RadioButton
                android:id="@+id/settingsSortingSizeDescendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sorting_by_size_descending" />

            <RadioButton
                android:id="@+id/settingsSortingLastModifiedAscendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sorting_by_modified_date_ascending" />

            <RadioButton
                android:id="@+id/settingsSortingLastModifiedDescendingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_sorting_by_modified_date_descending" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>